--- a/seedbox-stack.yaml
+++ b/seedbox-stack.yaml
@@ -25,19 +25,24 @@ services:
     restart: unless-stopped
 
   plex:
-    image: linuxserver/plex:latest
+    image: plexinc/pms-docker:latest
     networks:
       - traefik
     ports:
       - "1900:1900/udp"
-      - "32400:32400"
-      - "32469:32469"
-      - "5353:5353/udp"
+      - "3005:3005/tcp"
+      - "8324:8324/tcp"
+      - "32400:32400/tcp"
+      - "32410:32410/udp"
+      - "32412:32412/udp"
+      - "32413:32413/udp"
+      - "32414:32414/udp"
+      - "32469:32469/tcp"
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PLEX_UID=1000
+      - PLEX_GID=1000
       - TZ=Europe/Paris
-      - VERSION=docker
+      - PLEX_CLAIM=xxxxxxx # get it from https://www.plex.tv/claim
     labels:
       - "traefik.frontend.rule=Host:plex.<DOMAIN_NAME>"
       - "traefik.port=32400"
